src/main/java/Interpreter/IsidroLangParser.java
// Generated from /Users/grayjack/Documents/Sources/JavaProjects/compiladores-2023/src/main/antlr/IsidroLangParser.g4 by ANTLR 4.12.0
package interpreter;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class IsidroLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KW_DECLARE=1, KW_PROGRAMA=2, KW_FIMPROG=3, KW_INICIO=4, KW_FIM=5, KW_LEIA=6, 
		KW_ESCREVA=7, KW_ESCREVALINHA=8, KW_SE=9, KW_SENAO=10, KW_VERDADE=11, 
		KW_FALSO=12, KW_ENQUANTO=13, KW_PARE=14, KW_CONTINUE=15, KW_FACA=16, KW_TY_INT=17, 
		KW_TY_REAL=18, KW_TY_TXT=19, KW_TY_BOOL=20, KW_E=21, KW_OU=22, KW_NEG=23, 
		LINE_COMMENT=24, INT_LITERAL=25, FLOAT_LITERAL=26, STR_LITERAL=27, DEC_LITERAL=28, 
		HEX_LITERAL=29, OCT_LITERAL=30, BIN_LITERAL=31, PLUS=32, MINUS=33, STAR=34, 
		SLASH=35, DOT=36, COLON=37, COLONCOLON=38, COMMA=39, SEMI=40, EQ=41, NOTEQ=42, 
		MAIOR=43, MENOR=44, MAIOREQ=45, MENOREQ=46, ATTR=47, LPAREN=48, RPAREN=49, 
		LCURLY=50, RCURLY=51, ID=52, WS=53;
	public static final int
		RULE_prog = 0, RULE_bloco = 1, RULE_sttm = 2, RULE_declareSttm = 3, RULE_declareUmSttm = 4, 
		RULE_tipo = 5, RULE_seSttm = 6, RULE_enquantoSttm = 7, RULE_facaEnquantoSttm = 8, 
		RULE_leiaSttm = 9, RULE_escrevaSttm = 10, RULE_escrevaLinhaSttm = 11, 
		RULE_attrSttm = 12, RULE_exprSttm = 13, RULE_expr = 14, RULE_literalExpr = 15, 
		RULE_compoundExpr = 16, RULE_negExpr = 17, RULE_cmpOp = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "bloco", "sttm", "declareSttm", "declareUmSttm", "tipo", "seSttm", 
			"enquantoSttm", "facaEnquantoSttm", "leiaSttm", "escrevaSttm", "escrevaLinhaSttm", 
			"attrSttm", "exprSttm", "expr", "literalExpr", "compoundExpr", "negExpr", 
			"cmpOp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'declare'", "'programa'", "'fimprog'", "'inicio'", "'fim'", "'leia'", 
			"'escreva'", "'escrevaLinha'", "'se'", "'senao'", "'verdade'", "'falso'", 
			"'enquanto'", "'pare'", "'continue'", "'fa\\u00E7a'", "'int'", "'real'", 
			"'txt'", "'bool'", "'e'", "'ou'", "'neg'", null, null, null, null, null, 
			null, null, null, "'+'", "'-'", "'*'", "'/'", "'.'", "':'", "'::'", "','", 
			"';'", "'='", "'!='", "'>'", "'<'", "'>='", "'<='", "':='", "'('", "')'", 
			"'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KW_DECLARE", "KW_PROGRAMA", "KW_FIMPROG", "KW_INICIO", "KW_FIM", 
			"KW_LEIA", "KW_ESCREVA", "KW_ESCREVALINHA", "KW_SE", "KW_SENAO", "KW_VERDADE", 
			"KW_FALSO", "KW_ENQUANTO", "KW_PARE", "KW_CONTINUE", "KW_FACA", "KW_TY_INT", 
			"KW_TY_REAL", "KW_TY_TXT", "KW_TY_BOOL", "KW_E", "KW_OU", "KW_NEG", "LINE_COMMENT", 
			"INT_LITERAL", "FLOAT_LITERAL", "STR_LITERAL", "DEC_LITERAL", "HEX_LITERAL", 
			"OCT_LITERAL", "BIN_LITERAL", "PLUS", "MINUS", "STAR", "SLASH", "DOT", 
			"COLON", "COLONCOLON", "COMMA", "SEMI", "EQ", "NOTEQ", "MAIOR", "MENOR", 
			"MAIOREQ", "MENOREQ", "ATTR", "LPAREN", "RPAREN", "LCURLY", "RCURLY", 
			"ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IsidroLangParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IsidroLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public TerminalNode KW_PROGRAMA() { return getToken(IsidroLangParser.KW_PROGRAMA, 0); }
		public TerminalNode KW_FIMPROG() { return getToken(IsidroLangParser.KW_FIMPROG, 0); }
		public List<SttmContext> sttm() {
			return getRuleContexts(SttmContext.class);
		}
		public SttmContext sttm(int i) {
			return getRuleContext(SttmContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IsidroLangParserVisitor ) return ((IsidroLangParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(KW_PROGRAMA);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4785143566957506L) != 0)) {
				{
				{
				setState(39);
				sttm();
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(45);
			match(KW_FIMPROG);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocoContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(IsidroLangParser.COLON, 0); }
		public TerminalNode KW_FIM() { return getToken(IsidroLangParser.KW_FIM, 0); }
		public List<SttmContext> sttm() {
			return getRuleContexts(SttmContext.class);
		}
		public SttmContext sttm(int i) {
			return getRuleContext(SttmContext.class,i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).exitBloco(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IsidroLangParserVisitor ) return ((IsidroLangParserVisitor<? extends T>)visitor).visitBloco(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(COLON);
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4785143566957506L) != 0)) {
				{
				{
				setState(48);
				sttm();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			match(KW_FIM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SttmContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(IsidroLangParser.DOT, 0); }
		public DeclareUmSttmContext declareUmSttm() {
			return getRuleContext(DeclareUmSttmContext.class,0);
		}
		public DeclareSttmContext declareSttm() {
			return getRuleContext(DeclareSttmContext.class,0);
		}
		public SeSttmContext seSttm() {
			return getRuleContext(SeSttmContext.class,0);
		}
		public FacaEnquantoSttmContext facaEnquantoSttm() {
			return getRuleContext(FacaEnquantoSttmContext.class,0);
		}
		public EnquantoSttmContext enquantoSttm() {
			return getRuleContext(EnquantoSttmContext.class,0);
		}
		public LeiaSttmContext leiaSttm() {
			return getRuleContext(LeiaSttmContext.class,0);
		}
		public EscrevaSttmContext escrevaSttm() {
			return getRuleContext(EscrevaSttmContext.class,0);
		}
		public EscrevaLinhaSttmContext escrevaLinhaSttm() {
			return getRuleContext(EscrevaLinhaSttmContext.class,0);
		}
		public AttrSttmContext attrSttm() {
			return getRuleContext(AttrSttmContext.class,0);
		}
		public ExprSttmContext exprSttm() {
			return getRuleContext(ExprSttmContext.class,0);
		}
		public TerminalNode KW_CONTINUE() { return getToken(IsidroLangParser.KW_CONTINUE, 0); }
		public TerminalNode KW_PARE() { return getToken(IsidroLangParser.KW_PARE, 0); }
		public SttmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sttm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).enterSttm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).exitSttm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IsidroLangParserVisitor ) return ((IsidroLangParserVisitor<? extends T>)visitor).visitSttm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SttmContext sttm() throws RecognitionException {
		SttmContext _localctx = new SttmContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sttm);
		try {
			setState(71);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				match(DOT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				declareUmSttm();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				declareSttm();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				seSttm();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(60);
				facaEnquantoSttm();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(61);
				enquantoSttm();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(62);
				leiaSttm();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(63);
				escrevaSttm();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(64);
				escrevaLinhaSttm();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(65);
				attrSttm();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(66);
				exprSttm();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(67);
				match(KW_CONTINUE);
				setState(68);
				match(DOT);
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(69);
				match(KW_PARE);
				setState(70);
				match(DOT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclareSttmContext extends ParserRuleContext {
		public TerminalNode KW_DECLARE() { return getToken(IsidroLangParser.KW_DECLARE, 0); }
		public List<TerminalNode> ID() { return getTokens(IsidroLangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(IsidroLangParser.ID, i);
		}
		public TerminalNode DOT() { return getToken(IsidroLangParser.DOT, 0); }
		public List<TerminalNode> COMMA() { return getTokens(IsidroLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(IsidroLangParser.COMMA, i);
		}
		public TerminalNode ATTR() { return getToken(IsidroLangParser.ATTR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DeclareSttmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareSttm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).enterDeclareSttm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).exitDeclareSttm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IsidroLangParserVisitor ) return ((IsidroLangParserVisitor<? extends T>)visitor).visitDeclareSttm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareSttmContext declareSttm() throws RecognitionException {
		DeclareSttmContext _localctx = new DeclareSttmContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declareSttm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(KW_DECLARE);
			setState(74);
			match(ID);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(75);
				match(COMMA);
				setState(76);
				match(ID);
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ATTR) {
				{
				setState(82);
				match(ATTR);
				setState(83);
				expr(0);
				}
			}

			setState(86);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclareUmSttmContext extends ParserRuleContext {
		public TerminalNode KW_DECLARE() { return getToken(IsidroLangParser.KW_DECLARE, 0); }
		public TerminalNode ID() { return getToken(IsidroLangParser.ID, 0); }
		public TerminalNode DOT() { return getToken(IsidroLangParser.DOT, 0); }
		public TerminalNode COLONCOLON() { return getToken(IsidroLangParser.COLONCOLON, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ATTR() { return getToken(IsidroLangParser.ATTR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DeclareUmSttmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareUmSttm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).enterDeclareUmSttm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).exitDeclareUmSttm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IsidroLangParserVisitor ) return ((IsidroLangParserVisitor<? extends T>)visitor).visitDeclareUmSttm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareUmSttmContext declareUmSttm() throws RecognitionException {
		DeclareUmSttmContext _localctx = new DeclareUmSttmContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declareUmSttm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(KW_DECLARE);
			setState(89);
			match(ID);
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLONCOLON) {
				{
				setState(90);
				match(COLONCOLON);
				setState(91);
				tipo();
				}
			}

			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ATTR) {
				{
				setState(94);
				match(ATTR);
				setState(95);
				expr(0);
				}
			}

			setState(98);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TerminalNode KW_TY_BOOL() { return getToken(IsidroLangParser.KW_TY_BOOL, 0); }
		public TerminalNode KW_TY_INT() { return getToken(IsidroLangParser.KW_TY_INT, 0); }
		public TerminalNode KW_TY_REAL() { return getToken(IsidroLangParser.KW_TY_REAL, 0); }
		public TerminalNode KW_TY_TXT() { return getToken(IsidroLangParser.KW_TY_TXT, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).exitTipo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IsidroLangParserVisitor ) return ((IsidroLangParserVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1966080L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeSttmContext extends ParserRuleContext {
		public TerminalNode KW_SE() { return getToken(IsidroLangParser.KW_SE, 0); }
		public TerminalNode LPAREN() { return getToken(IsidroLangParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(IsidroLangParser.RPAREN, 0); }
		public List<TerminalNode> COLON() { return getTokens(IsidroLangParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(IsidroLangParser.COLON, i);
		}
		public List<SttmContext> sttm() {
			return getRuleContexts(SttmContext.class);
		}
		public SttmContext sttm(int i) {
			return getRuleContext(SttmContext.class,i);
		}
		public List<TerminalNode> KW_SENAO() { return getTokens(IsidroLangParser.KW_SENAO); }
		public TerminalNode KW_SENAO(int i) {
			return getToken(IsidroLangParser.KW_SENAO, i);
		}
		public List<TerminalNode> KW_FIM() { return getTokens(IsidroLangParser.KW_FIM); }
		public TerminalNode KW_FIM(int i) {
			return getToken(IsidroLangParser.KW_FIM, i);
		}
		public List<SeSttmContext> seSttm() {
			return getRuleContexts(SeSttmContext.class);
		}
		public SeSttmContext seSttm(int i) {
			return getRuleContext(SeSttmContext.class,i);
		}
		public SeSttmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seSttm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).enterSeSttm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).exitSeSttm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IsidroLangParserVisitor ) return ((IsidroLangParserVisitor<? extends T>)visitor).visitSeSttm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeSttmContext seSttm() throws RecognitionException {
		SeSttmContext _localctx = new SeSttmContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_seSttm);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(KW_SE);
			setState(103);
			match(LPAREN);
			setState(104);
			expr(0);
			setState(105);
			match(RPAREN);
			setState(106);
			match(COLON);
			setState(110);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(107);
					sttm();
					}
					} 
				}
				setState(112);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(128);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(126);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case KW_SENAO:
						{
						setState(113);
						match(KW_SENAO);
						setState(123);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case COLON:
							{
							setState(114);
							match(COLON);
							setState(118);
							_errHandler.sync(this);
							_la = _input.LA(1);
							while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4785143566957506L) != 0)) {
								{
								{
								setState(115);
								sttm();
								}
								}
								setState(120);
								_errHandler.sync(this);
								_la = _input.LA(1);
							}
							setState(121);
							match(KW_FIM);
							}
							break;
						case KW_SE:
							{
							setState(122);
							seSttm();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						break;
					case KW_FIM:
						{
						setState(125);
						match(KW_FIM);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(130);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnquantoSttmContext extends ParserRuleContext {
		public TerminalNode KW_ENQUANTO() { return getToken(IsidroLangParser.KW_ENQUANTO, 0); }
		public TerminalNode LPAREN() { return getToken(IsidroLangParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(IsidroLangParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(IsidroLangParser.COLON, 0); }
		public TerminalNode KW_FIM() { return getToken(IsidroLangParser.KW_FIM, 0); }
		public List<SttmContext> sttm() {
			return getRuleContexts(SttmContext.class);
		}
		public SttmContext sttm(int i) {
			return getRuleContext(SttmContext.class,i);
		}
		public EnquantoSttmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enquantoSttm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).enterEnquantoSttm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).exitEnquantoSttm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IsidroLangParserVisitor ) return ((IsidroLangParserVisitor<? extends T>)visitor).visitEnquantoSttm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EnquantoSttmContext enquantoSttm() throws RecognitionException {
		EnquantoSttmContext _localctx = new EnquantoSttmContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_enquantoSttm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(KW_ENQUANTO);
			setState(132);
			match(LPAREN);
			setState(133);
			expr(0);
			setState(134);
			match(RPAREN);
			setState(135);
			match(COLON);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4785143566957506L) != 0)) {
				{
				{
				setState(136);
				sttm();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142);
			match(KW_FIM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FacaEnquantoSttmContext extends ParserRuleContext {
		public TerminalNode KW_FACA() { return getToken(IsidroLangParser.KW_FACA, 0); }
		public TerminalNode COLON() { return getToken(IsidroLangParser.COLON, 0); }
		public TerminalNode KW_FIM() { return getToken(IsidroLangParser.KW_FIM, 0); }
		public TerminalNode KW_ENQUANTO() { return getToken(IsidroLangParser.KW_ENQUANTO, 0); }
		public TerminalNode LPAREN() { return getToken(IsidroLangParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(IsidroLangParser.RPAREN, 0); }
		public TerminalNode DOT() { return getToken(IsidroLangParser.DOT, 0); }
		public List<SttmContext> sttm() {
			return getRuleContexts(SttmContext.class);
		}
		public SttmContext sttm(int i) {
			return getRuleContext(SttmContext.class,i);
		}
		public FacaEnquantoSttmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_facaEnquantoSttm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).enterFacaEnquantoSttm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IsidroLangParserListener ) ((IsidroLangParserListener)listener).exitFacaEnquantoSttm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IsidroLangParserVisitor ) return ((IsidroLangParserVisitor<? extends T>)visitor).visitFacaEnquantoSttm(this);
			else return visitor.visitChildren(this);
		}
	}
